--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,7 +18,7 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 		</ul>
 	</div>
 	
-	<h4 class="g-top">방명록 v1 ( 김유미) build trigger second/h4>
+	<h4 class="g-top">방명록 v1 ( 김유미) build trigger second</h4>
 	<div class="top-img">
 		<img src="/bg-guestbook.jpg">
 	</div>
@@ -29,7 +29,6 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 				<li class="msg"><textarea name="content" maxlength="200" placeholder="내용을 입력해주세요" class="form-control" rows="3"></textarea></li>
 				<li>파일첨부<input type="file" name="uploadingFile"></li>
 			</ul>
-			<p class="btn btn-lg" onclick="document.getElementById('frm').submit();">방명록 남기기</p>
 		</div>
 	</form>
 
@@ -42,8 +41,10 @@ HealthCheck : This is v1 running in pod [[${host.name}]] ([[${host.ip}]])
 				첨부파일&nbsp;:&nbsp;<a th:href="@{'/downloadFile/' + ${post.attachedFile}}" th:text="${post.attachedFile}"></a>
 			</li>
 		</ul>
+		<p class="btn btn-lg" onclick="document.getElementById('frm').submit();">방명록 남기기</p>
 	</div>
 </body>
 
 </html>
+
 
